deployment-dog-service.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dog-service
  namespace: ns-sample  
  labels:
    name: spring-dogservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: dog-service
        app: dog-service
    spec:
      containers:
      - name: dog-service
        image: anthonydenecheau/k8s-dogservice:k8s-dogservice-master-20180713074018-23
        ports:
          - name: http
            containerPort: 8090       
        livenessProbe:
          httpGet:
            path: /health
            port: 8090
            httpHeaders:
            - name: X-SCC-authentification
              value: myKeyLivenessAdministrator
          initialDelaySeconds: 45
          periodSeconds: 3
        readinessProbe:  
          httpGet:
            path: /health
            port: 8090
            httpHeaders:
            - name: X-SCC-authentification
              value: myKeyReadinessAdministrator
          initialDelaySeconds: 30
          periodSeconds: 10                  
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        command:
        - "/go/bin/agent-linux"
        - "--collector.host-port=jaeger-collector.default:14267"
