deployment-gateway.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway
  namespace: ns-sample
  labels:
    name: gateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: gateway
        app: gateway
    spec:
      containers:
      - name: gateway
        image: anthonydenecheau/k8s-gateway:k8s-gateway-master-20180730181835-20
        ports:
          - name: http
            containerPort: 8080       
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            httpHeaders:
            - name: X-SCC-authentification
              value: myKeyLivenessAdministrator
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:  
          httpGet:
            path: /health
            port: 8080
            httpHeaders:
            - name: X-SCC-authentification
              value: myKeyReadinessAdministrator
          initialDelaySeconds: 30
          periodSeconds: 10              
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        command:
        - "/go/bin/agent-linux"
        - "--collector.host-port=jaeger-collector.default:14267"
