service-authentication-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: ns-sample 
  labels:
    name: authentication-service
spec:
  type: NodePort
  selector:
    name: authentication-service
  ports:
    - name: http
      port: 8095
      targetPort: http
