service-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ns-sample 
  labels:
    name: gateway
spec:
  type: NodePort
  selector:
    name: gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
