ingress-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
#  annotations:
#    kubernetes.io/ingress.allow-http: "false"
spec:
#  tls:
#  - secretName: your-tls-secret
  backend:
    serviceName: gateway-service
    servicePort: 8080
